--- a/src/components/styles/Landing.css
+++ b/src/components/styles/Landing.css
@@ -212,6 +212,13 @@
   text-transform: uppercase;
   letter-spacing: 2px;
 }
+.landing-info-h2-alt {
+  position: absolute;
+  opacity: 0;
+  animation: fadeIn 2s forwards;
+  animation-delay: 2s;
+}
+
 .landing-h2-info-1 {
   position: absolute;
   top: 0;
