--- a/src/components/styles/WhatIDo.css
+++ b/src/components/styles/WhatIDo.css
@@ -8,7 +8,7 @@
   width: var(--cWidth);
   max-width: 1920px;
   margin: auto;
-  z-index: 9;
+  z-index: 20;
 }
 
 /* Title Box */
@@ -17,23 +17,28 @@
   display: flex;
   justify-content: center;
   position: relative;
-  z-index: 9;
+  z-index: 25;
 }
 
 .what-box h2 {
   font-size: calc(4vw + 25px);
-  line-height: calc(4vw + 20px);
+  line-height: 1.1;
   font-weight: 600;
   margin-right: 10%;
   margin-bottom: 100px;
+  position: relative;
+  z-index: 30;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  color: #fff;
+  white-space: pre-line;
 }
 
-.hat-h2 {
-  font-style: italic;
-}
-
-.do-h2 {
+.what-i-do {
   color: var(--accentColor);
+  line-height: 1;
+  margin-top: 0.1em;
+  display: inline-block;
 }
 
 /* Content Box Container */
@@ -42,7 +47,7 @@
   height: 500px;
   margin-left: 200px;
   position: relative;
-  display: none;
+  display: flex;
 }
 
 /* Individual Content Sections */
@@ -370,7 +375,7 @@
   .what-box h2 {
     margin: 50px 0;
     font-size: 55px;
-    line-height: 53px;
+    line-height: 1;
   }
   
   .what-box-in {
